Share field trial allocator on Mac

This CL shares the field trial allocator on MacOS. It depends on Mac having
POSIX shared memory support, but other than that it is basically the same mechanism as that in the Linux CL: https://codereview.chromium.org/2530573002/. We basically just need to edit some ifdefs.

NOTE: turning on NOPRESUBMIT because the dependent CL re-adds some banned calls to AllowIO.

BUG=663912
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2565683003
Cr-Commit-Position: refs/heads/master@{#438265}

Former-commit-id: d17b445e932a10c875cea034b037b19d30e47a8c